--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
